Fixed footer layout on small screens

--- a/_stylus/layout/footer.styl
+++ b/_stylus/layout/footer.styl
@@ -4,49 +4,79 @@ footer
     span(1/1)
 
     .container
-        padding 50px 30px 25px
-
+        padding 50px 15px 40px
+        .footer-logo
+            +below($xs)
+                display none
+            svg
+                width 70px
+            .text,
+            .shape
+                fill #fff
+        ul
+            margin-left 0px
+            padding-left 0px
+            margin-bottom 0px
         ul li
             a
                 color #8487b2
                 font-weight 600
                 &:hover
-                    color $color-a-hover
+                    color #fff
 
         .company
             ul
-                margin-top 40px
+                margin-top 10px
+                +below($xs)
+                    margin-top 0px
+                    margin-bottom 20px
+                    text-align center
                 li
-                    float left
+                    text-align center
+                    display inline-block
                     &:not(:last-child)
                         margin-right 20px
+                    +above($xs)
+                        float left
+                        
             span(2/3)
+            +below($xs)
+                span()
 
         .connect
             ul
                 margin-top 20px
+                +below($xs)
+                    margin-top 0px
+                    text-align center
                 li
-                    float right
-                    &:not(:last-child)
-                        margin-left 20px
+                    text-align center
+                    display inline-block
+                    +below($xs)
+                        &:not(:last-child)
+                            margin-right 20px
+                    +above($xs)
+                        float right
+                        &:not(:last-child)
+                            margin-left 20px
+                        
             span(1/3)
+            +below($xs)
+                span()
             text-align right
             h5
                 color #fff
+                +below($xs)
+                    text-align center
+                    margin-bottom 0px
 
         .legal
             ul
                 li
-                    float left
-                    &:not(:last-child)
-                        margin-right 20px
-            span(1/1)
-            margin-top 30px
-            @media(max-width 520px)
-                width 100%
-                ul
-                    margin 0 auto
-                    li
-                        text-align center
-                        margin-right 0
-                        margin-bottom 10px
+                    text-align center
+                    +above($xs)
+                        float left
+                        &:not(:last-child)
+                            margin-right 20px
+            span()
+            margin-top 20px
