--- a/_stylus/layout/page-landing.styl
+++ b/_stylus/layout/page-landing.styl
@@ -44,7 +44,7 @@
 
     .user-quotes
         background-color #E1E5F1
-        padding 50px 30px
+        padding 50px 0px
         span(1/1)
         .quote
             text-align left
